<resources>
    <string name="app_name">Labka</string>
    <string name="game_rule">Чи співпадає названня кольору з текстом ?</string>
    <string name="text_yes">Так</string>
    <string name="text_no">Ні</string>

    <string name="color_Red">Червоний</string>
    <string name="color_Orange">Оранжевий</string>
    <string name="color_Yellow">Жовтий</string>
    <string name="color_Green">Зелений</string>
    <string name="color_Blue">Синій</string>
    <string name="color_Violet">Фіолетовий</string>
    <string name="color_Black">Чорний</string>
    <string name="start_color_Black">Чорний</string>
    <string name="you_won">Ви виграли</string>
    <string name="you_lose">Ви програли</string>
    <string name="start">Почати</string>
    <string name="stop">Зупинити</string>
    <string name="restart">Почати заново</string>
    <string name="correct_answer_number">Правильних відповідей: </string>
    <string name="time_left">Часу залишилося: </string>
    <string name="seconds">с.</string>
    <string name="cheat_on">Всі відповіді правильні</string>
    <string name="cheat_off">Основний режим</string>
    <string name="minute">Хвилина</string>
    <string name="two_minute">Дві хвилини</string>
    <string name="settings">Налаштування</string>
    <string name="user_not_registered">Користувач не зареєстрований</string>
    <string name="registration">Реєстрація</string>
    <string name="start_game">Почати гру</string>
    <string name="statistic">Статистика</string>
    <string name="greetings_p1">Вітаємо</string>
    <string name="greetings_p2">!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fast_game_without_statistic">Швидка гра</string>
    <string name="main_page">На головну</string>

    <string name="submit">Підтвердити</string>
    <string name="name">Імʼя</string>
    <string name="email">E-mail</string>
    <string name="change_settings">Змінити налаштування</string>
    <string name="finish_game">Завершити гру</string>
    <string name="max_score">Рекорд</string>
    <string name="send_on_email">Надіслати на E-mail</string>
    <string name="lr_14_15">ЛР 14–15</string>
</resources>